css/style.css
/* ... */
.fc-agenda-slots td div {
	height: 20px
}
.fc-agenda-slots tr.fc-slot0 th, .fc-agenda-slots tr.fc-slot0 td {
	border-top-width: 0
}
.fc-agenda-slots tr.fc-minor th, .fc-agenda-slots tr.fc-minor td {
	border-top-style: dotted
}
.fc-agenda-slots tr.fc-minor th.ui-widget-header {
*border-top-style:solid
}
.fc-event-vert {
	border-width: 0 1px
}
.fc-event-vert .fc-event-head, .fc-event-vert .fc-event-content {
	position: relative;
	z-index: 2;
	width: 100%;
	overflow: hidden
}
.fc-event-vert .fc-event-time {
	white-space: nowrap;
	font-size: 10px
}
.fc-event-vert .fc-event-bg {
	position: absolute;
	z-index: 1;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	background: #fff;
	opacity: .3;
	filter: alpha(opacity=30)
}
.fc .ui-draggable-dragging .fc-event-bg, .fc-select-helper .fc-event-bg {
	display: none\9
}
.fc-event-vert .ui-resizable-s {
	bottom: 0 !important;
	width: 100% !important;
	height: 8px !important;
	overflow: hidden !important;
	line-height: 8px !important;
	font-size: 11px !important;
	font-family: monospace;
	text-align: center;
	cursor: s-resize
}
.fc-agenda .ui-resizable-resizing {
	_overflow: hidden
}
.fc-header-left .fc-button-prev .fc-button-inner {background: url('../img/icons-sa7c41345d9.png') no-repeat; background-position: 0 -351px;
height: 16px;
width: 11px;}

.fc-header-left .fc-button-next .fc-button-inner {background: url('../img/icons-sa7c41345d9.png') no-repeat; background-position: 0 -367px;
height: 16px;
width: 11px;}

/*------------------------------------------------------------------
[8. Miscellaneous]
*/

.chart-holder {
	width: 100%;
	height: 250px;
}

.dropdown-menu li>a:hover, .dropdown-menu .active>a, .dropdown-menu .active>a:hover { background:#00ba8b;}

.accordion-heading { background:#e5e5e5;  }
.accordion-heading a { color:#545454; text-decoration:none; font-weight:bold; }

.btn-facebook-alt i {
	color: #23386a;
}
.btn-twitter-alt i {
	color: #0098d0;
}
.btn-google-alt i {
	color: #b6362d;
}
.btn-linkedin-alt i {
	color: #0073b2;
}
.btn-pinterest-alt i {
	color: #ab171e;
}
.btn-github-alt i {
	color: #333;
}

.all-icons li { list-style:none;}

.ML0 { margin-left:0}
.MR0 { margin-right:0;}

.paginate_active { text-decoration: underline; }

#refresh-ispeed .icon-refresh, #refresh-ping .icon-refresh, #refresh-bandwidth .icon-refresh {
	margin: 0;
}

/*------------------------------------------------------------------
[1. Max Width: 480px]
*/

@media (max-width: 480px) {
	
	.error-container h1 {
		font-size: 72px;
	}
	
}





/*------------------------------------------------------------------
[1. Max Width: 767px]
*/

@media (max-width: 767px) {
    	
	#main {
		padding: 0 10px;
		margin-right: -20px;
		margin-left: -20px;	
	}
	
	
	.subnavbar {
		margin-left: -20px;
		margin-right: -20px;	
	}

	
	.subnavbar .container > ul {
		width: 100%;
		height: auto;
		
		border: none;
	}
	
	.subnavbar .container > ul > li {
		width: 33%;
		height: 70px;
		margin-bottom: 0;
		
		border: none;
	}
	
    
    
    .subnavbar .container > ul > li.active > a {
		font-size: 11px;
    	background: transparent;
    }
	
	.subnavbar .container > ul > li > a > i {	
		display: inline-block;	
		margin-bottom: 0;
		
		font-size: 20px;
	}
	
	
	.subnavbar-open-right .dropdown-menu {
		left: auto;
		right: 0;
	}
	
	.subnavbar-open-right .dropdown-menu:before {
		left: auto;
		right: 12px;
	}
	.subnavbar-open-right .dropdown-menu:after {
		left: auto;
		right: 13px;
	}
	
	.extra {
		margin-right: -20px;
		margin-left: -20px;
	}
	
	.extra .container {
		padding: 0 20px;
	}
	
	.footer {
		margin-right: -20px;
		margin-left: -20px;
	}
	
	.footer .container {
		padding: 0 20px;
	}
	
	.footer .footer-terms {
		text-align: left;
	}
	
	.footer .footer-terms a {
		margin-left: 0;
		margin-right: 1em;
	}

}
    




/*------------------------------------------------------------------
[2. Max Width: 979px]
*/

@media (max-width: 979px) {
	
	.navbar-fixed-top {
		position: static;
		
		margin-bottom: 0;
	}
	
	.subnavbar {
	}
	
	.subnavbar .container {		
		width: auto;
	}

	.subnavbar-inner {
		height: auto;
	}

	.widget-header {
		height: 100%;
	}

	.widget-header h3 {
		margin-right: 1em;
	}

	.js-refresh-info {
		margin-left: 25px;
	}
}






/*------------------------------------------------------------------
[3. Max Width: 1199px]
*/

@media (max-width: 1199px) {
	.navbar .search-query {
		width: 200px;
	}

	.widget-header {
		height: 100%;
	}

	.js-refresh-info {
		margin-left: 25px;
	}	
}

/* ----------------------------------------
	Subnavbar CSS fix/work-around
*/

.container.nav-collapse.in {
    overflow:visible;
}
.btn-navbar {
    margin-top:-38px;
}

/*------------------------------------------------------------------
	general-info widget specific style
*/

#general-info-widget .general-title {
	font-weight: bold;
}

#general-info-widget .general-title:after {
	content:":";
}

#general-info-widget .widget-content {
	padding:5px;
}

#general-info-widget .widget-content div {
	margin-bottom:5px;
}

